# french_verb_learning

./: .gitignore  Home.py  OLD_main.py  README.md  VOICE_CHAT_SETUP.md  environment.yml  main.py  pyproject.toml  test.ipynb
data_prep/: correct_verb_forms.py
notebooks/: test.ipynb
old_pages/: 02_Voice_Chat_old_v2.py
pages/: 01_Conjugations.py  01_Practice.py  02_Error_Logging.py  02_Voice_Chat.py  02_Voice_Chat_new.py  02_Voice_Chat_new2.py  02_Voice_Chat_old.py  03_Error_Logging.py
src/: checking.py  config.py  correct_verb_forms.py  load_data.py  logging_attempts.py  realtime_desktop.py  realtime_desktop_fixed.py  realtime_desktop_fixed_v2.py  select_input.py  session.py  vocab_pipeline.py
